--- a/assignment_1/public_html/index.html
+++ b/assignment_1/public_html/index.html
@@ -19,32 +19,33 @@
 			<p>On our third page, we got our daily hours. This page is the second most viewed page right behind our MENU page! The menu shows the community some of our most popular and well-known dishes.</p>
 			<p>If you need to find out how to find us look no further than our directions page.</p>
 			<p>And last but not least, we have our applications page to tell you guys how to become one of us! We welcome everybody!</p>
-<header>
-	<nav>
-		<ul>
-<li>
-<a href="index.html">Home Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="about.html">About Page</a> <!--Clarke-->
-</li>
-<li>
-<a href="hours.html">Hours Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="menu.html">Menu Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="directions.html">Directions Page</a> <!--Clarke-->
-</li>
-<li>
-<a href="applications.html">Applications Page</a> <!--Clarke-->
-</li>
-		</ul>
-	</nav>
-</header>
-<footer>
-537-851-5760
-</footer>
-</body>
+<!--I indented the lower lines-->
+	<header>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html">Home Page</a> <!--Breydon-->
+				</li>
+				<li>
+					<a href="about.html">About Page</a> <!--Clarke-->
+				</li>
+				<li>
+					<a href="hours.html">Hours Page</a> <!--Breydon-->
+				</li>
+				<li>
+					<a href="menu.html">Menu Page</a> <!--Breydon-->
+				</li>
+				<li>
+					<a href="directions.html">Directions Page</a> <!--Clarke-->
+				</li>
+				<li>
+					<a href="applications.html">Applications Page</a> <!--Clarke-->
+				</li>
+			</ul>
+		</nav>
+	</header>
+		<footer>
+			537-851-5760
+		</footer>
+	</body>
 </html>
