--- a/assignment_1/public_html/menu.html
+++ b/assignment_1/public_html/menu.html
@@ -13,55 +13,56 @@
 	<header>
 		<ul>
 			<li>
-				<p>Hamburger</p>
+				<p><!--added em--><em>Hamburger</em></p>
 			</li>
 		</ul>
 				<p>Our hamburger is one of the greatest burgers of all time. Period. Nothing else needs to be said for how good it is!</p>
 		<ul>
 			<li>
-				<p>Steak</p>
+				<p><!--added em--><em>Steak</em></p>
 			</li>
 		</ul>
 				<p>Our steaks are made like steaks should be made. Medium rare is the longest we cook them. Every cut into the steak streams out the sweet-savory juice that makes them amazing!</p>
 		<ul>
 			<li>
-				<p>Taco</p>
+				<p><!--added em--><em>Taco</em></p>
 			</li>
 		</ul>
 				<p>Do you need something light to eat or are you in a hurry? Don't look farther than our tacos. You can add any toppings that we offer on your taco, making it one of the most popular items. Ask for a crunchy shell if you are feeling special or you can order it like a burrito.</p>
 		<ul>
 			<li>
-				<p>Meatloaf</p>
+				<p><!--added em--><em>Meatloaf</em></p>
 			</li>
 		</ul>
 				<p>Meatloaf is the way to go if you aren't sure what you want to eat tonight. With it being a homemade special, there is not any sauce that needs to go with it. The meatloaf is just that good.</p>
 	</header>
-<header>
-<nav>
-<ul>
-<li>
-<a href="index.html">Home Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="about.html">About Page</a> <!--Clarke-->
-</li>
-<li>
-<a href="hours.html">Hours Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="menu.html">Menu Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="directions.html">Directions Page</a> <!--Clarke-->
-</li>
-<li>
-<a href="applications.html">Applications Page</a> <!--Clarke-->
-</li>
-</ul>
-</nav>
-</header>
-<footer>
-537-851-5760
-</footer>
-</body>
+<!--indented the lower lines-->
+	<header>
+		<nav>
+			<ul>
+				<li>
+					<a href="index.html">Home Page</a> <!--Breydon-->
+				</li>
+				<li>
+					<a href="about.html">About Page</a> <!--Clarke-->
+				</li>
+				<li>
+					<a href="hours.html">Hours Page</a> <!--Breydon-->
+				</li>
+				<li>
+					<a href="menu.html">Menu Page</a> <!--Breydon-->
+				</li>
+				<li>
+					<a href="directions.html">Directions Page</a> <!--Clarke-->
+				</li>
+				<li>
+					<a href="applications.html">Applications Page</a> <!--Clarke-->
+				</li>
+			</ul>
+		</nav>
+	</header>
+		<footer>
+			537-851-5760
+		</footer>
+	</body>
 </html>
