--- a/assignment_1/public_html/about.html
+++ b/assignment_1/public_html/about.html
@@ -30,7 +30,8 @@
 				</li>
 			</ul>
 		</nav>
-		<h1>Your Local Restaurant</h1>
+		<!--changed name-->
+		<h1>Your Restaurant</h1>
 		</header>
 		<h1>We have been open since the beginning of the American Revolution, and have proudly served the area ever since.</h1>
 		
