--- a/assignment_1/public_html/about.html
+++ b/assignment_1/public_html/about.html
@@ -41,11 +41,11 @@
 		If you still aren't convinced, come visit us and mention this webpage 
 	to get a free appetizer and half off drinks&excl; We guarantee you won't regret it.</p>
 		<h2>Try our Charity Chowdown Challenge&excl; One of everything on the 
-menu is yours to take down in one hour along with two friends. If you lose, we donate the cost of all menu items to a local charity. If you win, you get 
-free pancakes for a month and &dollar;350 to the charity of your choosing&excl;</h2>
+menu is yours to take down in one hour along with two friends. If you lose, we donate the cost of all menu items to a local charity. If you win, you get free pancakes for a month and &dollar;350 to the charity of your choosing&excl;</h2>
 		<footer>
 			537-851-5760
 		</footer>
-		</body>
-		</html>
+<!--organized the lower tags-->
+	</body>
+</html>
 
