--- a/assignment_1/public_html/about.html
+++ b/assignment_1/public_html/about.html
@@ -5,6 +5,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>About</title>
+		<style>
+			h1 {
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>    <!--write the body-->
 		<header>
@@ -30,13 +35,9 @@
 				</li>
 			</ul>
 		</nav>
-<<<<<<< HEAD
-		<--changed name-->
-		<h1>Classic Family Restaurant</h1>
-=======
 		<!--changed name-->
-		<h1>Your Restaurant</h1>
->>>>>>> fc4deeb23e8733d749af0343e5041d012b998363
+		<h1>Classic Family Restaurant</h1>
+		<!--changed name-->
 		</header>
 		<h1>We have been open since the beginning of the American Revolution, and have proudly served the area ever since.</h1>
 		
@@ -51,7 +52,7 @@ free pancakes for a month and &dollar;350 to the charity of your choosing&excl;<
 		<footer>
 			537-851-5760
 		</footer>
-	<--organized the lower tags-->
+	<!--organized the lower tags-->
 	</body>
 </html>
 
