Update with CSS info

--- a/assignment_1/public_html/about.html
+++ b/assignment_1/public_html/about.html
@@ -5,12 +5,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>About</title>
+		<link rel="stylesheet" type="text/css" href="css_sheet.css">
 		<style>
 			h1 {
 				text-align: center;
 			}
 		</style>
 	</head>
+
 	<body>    <!--write the body-->
 		<header>
 		<nav>
@@ -50,7 +52,7 @@
 menu is yours to take down in one hour along with two friends. If you lose, we donate the cost of all menu items to a local charity. If you win, you get
 free pancakes for a month and &dollar;350 to the charity of your choosing&excl;</h2>
 		<footer>
-			537-851-5760
+			Contact us! 537-851-5760
 		</footer>
 	<!--organized the lower tags-->
 	</body>
