Update with CSS info

--- a/assignment_1/public_html/applications.html
+++ b/assignment_1/public_html/applications.html
@@ -5,6 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Join our team!</title>
+		<link rel="stylesheet" type="text/css" href="css_sheet.css">
 	</head>
 	<body>    <!--write the body-->
 		<header>
@@ -32,13 +33,15 @@
 		</nav>
 		<h1>Your Local Restaurant</h1>
 		</header>
-		<p>Now Hiring Multiple Positions &excl;</p>
+
+		<section>
+		<p>Now Hiring Multiple Positions&excl;</p>
 		<table>
 			<thead>
 				<tr>
 					<th>Position</th>
 					<th>Hours</th>
-					<th>Training &verbar;</th>
+					<th>Training</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -58,9 +61,9 @@
 		</table>
 		<p>We offer many benefits including holidays off, flexible hours, competitive pay, and free meals while on the clock&excl;</p>
 		<p>Stop by and grab an application or call us to arrange an interview&period;</p>
+	</section>
 		<footer>
-			537-851-5760
+			Contact us! 537-851-5760
 		</footer>
-		</body>
-		</html>
-
+	</body>
+</html>
