--- a/assignment_1/public_html/hours.html
+++ b/assignment_1/public_html/hours.html
@@ -2,45 +2,14 @@
 <!--Breydon-->
 <!DOCTYPE html>
 <html lang="en">
-		<head>
-			<meta charset="utf-8">
-	<title>Hours</title>
-		</head>
+	<head>
+		<meta charset="utf-8">
+		<title>Hours</title>
+		<link rel="stylesheet" type="text/css" href="css_sheet.css">
+	</head>
+
 	<body>
-		<h1>
-			<em>Restaurant Hours</em>
-		</h1>
-				<p>Welcome to the hours of <em>YOUR</em> local restaurant! We are open most of the day, 7 days a week.</p>
-				<p>If you want to eat breakfast for dinner, go right ahead! If a hamburger sounds good for breakfast, go right ahead!</p>
-				<p>Our main priority here is to make sure you do not go home hungry! And if for some reason you cannot eat all of the food, we offer take home! Just ask our professional team and they will show you the different sized of carry out boxes we offer!</p>
-		<h2>
-			<em>Menu Hours</em>
-		</h2>
-				<p>We love food just as much as you do! That's why we started out own restaurant! So because of that, we are serving <em>breakfast, lunch, and dinner</em> at any time during our hours.</p>
-				<p>We challenge you to push our chefs limits. Go crazy on what to order, our chefs will be ready for it!</p>
-		<table>
-			<tr>
-				<th>Monday</th>
-				<th>Tuesday</th>
-				<th>Wednesday</th>
-				<th>Thursday</th>
-				<th>Friday</th>
-				<th>Saturday</th>
-				<th>Sunday</th>
-			</tr>
-		<tbody>
-			<tr>
-				<td>8am-9pm</td>
-				<td>8am-9pm</td>
-				<td>8am-9pm</td>
-				<td>8am-9pm</td>
-				<td>7am-9pm</td>
-				<td>6am-9pm</td>
-				<td>6am-9pm</td>
-			</tr>
-		</tbody>
-		</table>
-<header>
+		<header>
 <nav>
 <ul>
 <li>
@@ -63,9 +32,45 @@
 </li>
 </ul>
 </nav>
-</header>
-<footer>
-537-851-5760
-</footer>
-</body>
+		<h1>
+			<em>Restaurant Hours</em>
+		</h1>
+		</header>
+		
+		<section>
+			<p>Welcome to the hours of <em>YOUR</em> local restaurant! We are open most of the day, 7 days a week.</p>
+			<p>If you want to eat breakfast for dinner, go right ahead! If a hamburger sounds good for breakfast, go right ahead!</p>
+			<p>Our main priority here is to make sure you do not go home hungry! And if for some reason you cannot eat all of the food, we offer take home! Just ask our professional team and they will show you the different sized of carry out boxes we offer!</p>
+		<h2>
+			<em>Menu Hours</em>
+		</h2>
+			<p>We love food just as much as you do! That's why we started out own restaurant! So because of that, we are serving <em>breakfast, lunch, and dinner</em> at any time during our hours.</p>
+			<p>We challenge you to push our chefs limits. Go crazy on what to order, our chefs will be ready for it!</p>
+		<table>
+			<tr>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+				<th>Saturday</th>
+				<th>Sunday</th>
+			</tr>
+		<tbody>
+			<tr>
+				<td>8am-9pm</td>
+				<td>8am-9pm</td>
+				<td>8am-9pm</td>
+				<td>8am-9pm</td>
+				<td>7am-9pm</td>
+				<td>6am-9pm</td>
+				<td>6am-9pm</td>
+			</tr>
+		</tbody>
+		</table>
+	</section>
+		<footer>
+			Contact us! 537-851-5760
+		</footer>
+	</body>
 </html>
