--- a/assignment_1/public_html/about.html
+++ b/assignment_1/public_html/about.html
@@ -39,18 +39,28 @@
 		</nav>
 		<!--changed name-->
 		<h1>Classic Family Restaurant</h1>
-		<!--changed name-->
 		</header>
-		<h1>We have been open since the beginning of the American Revolution, and have proudly served the area ever since.</h1>
+
+		<section>
+		<h2>We have been open since the beginning of the American Revolution, and have proudly served the area ever since.</h2>
 		
 		<p>When it comes to local restaurants, ours is one of the most storied and patriotic of them all. Paul Revere used to buy our eggs before he would ride off to do his daily responsibilities. We have never lost our will to serve our fellow countrymen, or our commitment to excellence.<br>
-			Our establishment has endured many tragedies such as natural disasters and frontier violence, but through it all we continued to serve our community.<br>
-			In 2012, we were voted BEST homemade omelets in all of New England, and were even featured in an episode of Guy Fieri's <em> Diners, Drive-ins &amp; Dives.</em> <br>
+
+		Our establishment has endured many tragedies such as natural disasters and frontier violence, but through it all we continued to serve our community.<br>
+		
+		In 2012, we were voted BEST homemade omelets in all of New England, and were even featured in an episode of Guy Fieri's <em> Diners, Drive-ins &amp;Dives.</em> <br>
+
 		If you still aren't convinced, come visit us and mention this webpage 
-	to get a free appetizer and half off drinks&excl; We guarantee you won't regret it.</p>
-		<h2>Try our Charity Chowdown Challenge&excl; One of everything on the 
-menu is yours to take down in one hour along with two friends. If you lose, we donate the cost of all menu items to a local charity. If you win, you get
-free pancakes for a month and &dollar;350 to the charity of your choosing&excl;</h2>
+		to get a free appetizer and half off drinks&excl; We guarantee you won't regret it.</p>
+
+		<p id="challenge">Try our Charity Chowdown Challenge&excl; One of everything on the 
+		menu is yours to take down in one hour along with two friends. <br>
+		If you lose, we donate the cost of all menu items to a local charity. 
+		If you win, you get
+		free pancakes for a month and &dollar;350 to the charity of your choosing&excl;</p>
+
+		</section>
+
 		<footer>
 			Contact us! 537-851-5760
 		</footer>
