--- a/assignment_1/public_html/directions.html
+++ b/assignment_1/public_html/directions.html
@@ -5,6 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Find Us!</title>
+		<link rel="stylesheet" type="text/css" href="css_sheet.css">
 	</head>
 	<body>    <!--write the body-->
 		<header>
@@ -32,12 +33,16 @@
 		</nav>
 		<h1>Your Local Restaurant</h1>
 		</header>
+
+	<section>
 		<p>We are located at the corner of 3rd Street and 15th Avenue and catty-corner to Escapade Boulevard. We also offer delivery services through UberEats and Grubhub.</p>
 		<p>Our address is 1722 W 3rd Street if you would prefer to use a navigation app to guide you.</p>
+	</section>
+	
 		<img src="images/map.png"  alt="Map of Location" />
 		<img src="images/street_view.png" alt="Street view" /> <!--I made both of these in MS Paint I hope they get the point across-->
 		<footer>
-			537-851-5760
+			Contact us! 537-851-5760
 		</footer>
-		</body>
-		</html>
+	</body>
+</html>
