--- a/assignment_1/public_html/index.html
+++ b/assignment_1/public_html/index.html
@@ -7,9 +7,9 @@
 		<title>Home</title>
 		<link rel="stylesheet" type="text/css" href="css_sheet.css">
 		<style>
-			h1 {
+			h2 {
 				text-align: center;
-				font-size: 34px;
+				font-size: 24px;
 			}
 		</style>
 	</head>
@@ -38,46 +38,42 @@
 					</li>
 				</ul>
 			</nav>
+			<img src="image/welcome.jpg" alt="Welcome" height="80" width="500">
 		</header>
 
-		<img src="image/welcome.jpg" alt="Welcome" height="80" width="500">
-		
-		<h1>Why Hello</h1>
+		<section>
 		<p>
 			What brings you to this webpage on the internet?
 			Did you click on the wrong website, did you randomly end up here, or did your device send you here?
 		</p>
 
-		<h2>IT DOESN'T MATTER</h2>
+		<h2>It doesn't matter!</h2>
+
 		<p>
 			Because you are on the one and only famous local restaurant's website!
-		</p>
-		<p>
+			<br>
 			You better be hanging on to your seats because after reading this website you will be drooling saliva because the food here is delicious!
 		</p>
 
 		<h3 style="text-align: center; font-size: 20px;">Anyway, <em>welcome</em> to our website!</h3>
 		<p>
 			Through this website, you can find all the information you are looking at for your local restaurant!
-		</p>
-		<p>
+		<br>
 			Starting off on the second page we tell you about ourselves. 
 			Go there to find out more about us and our restaurant.
-		</p>
-		<p>
+		<br>
 			On our third page, we got our daily hours. 
 			This page is the second most viewed page right behind our MENU page! 
 			The menu shows the community some of our most popular and well-known dishes.
-		</p>
-		<p>
+		<br>
 			If you need to find out how to find us look no further than our directions page.
-		</p>
-		<p>
+		<br>
 			And last but not least, we have our applications page to tell you guys how to become one of us! We welcome everybody!
 		</p>
 	
+		</section>
 		<footer>
-			537-851-5760
+			Contact us! 537-851-5760
 		</footer>
 
 	</body>
