--- a/assignment_1/public_html/menu.html
+++ b/assignment_1/public_html/menu.html
@@ -2,42 +2,13 @@
 <!--Breydon-->
 <!DOCTYPE html>
 <html lang="en">
-		<head>
-			<meta charset="utf-8">
-	<title>Menu</title>
-		</head>
+	<head>
+		<meta charset="utf-8">
+		<title>Menu</title>
+		<link rel="stylesheet" type="text/css" href="css_sheet.css">
+	</head>
 	<body>
-			<h1><em>Our famous food</em></h1>
-				<p>Your local restaurant is known for its outstanding selection of great American food!</p>
-				<p>Our list of food is but not limited to...</p>
-	<header>
-		<ul>
-			<li>
-				<p><!--added em--><em>Hamburger</em></p>
-			</li>
-		</ul>
-				<p>Our hamburger is one of the greatest burgers of all time. Period. Nothing else needs to be said for how good it is!</p>
-		<ul>
-			<li>
-				<p><!--added em--><em>Steak</em></p>
-			</li>
-		</ul>
-				<p>Our steaks are made like steaks should be made. Medium rare is the longest we cook them. Every cut into the steak streams out the sweet-savory juice that makes them amazing!</p>
-		<ul>
-			<li>
-				<p><!--added em--><em>Taco</em></p>
-			</li>
-		</ul>
-				<p>Do you need something light to eat or are you in a hurry? Don't look farther than our tacos. You can add any toppings that we offer on your taco, making it one of the most popular items. Ask for a crunchy shell if you are feeling special or you can order it like a burrito.</p>
-		<ul>
-			<li>
-				<p><!--added em--><em>Meatloaf</em></p>
-			</li>
-		</ul>
-				<p>Meatloaf is the way to go if you aren't sure what you want to eat tonight. With it being a homemade special, there is not any sauce that needs to go with it. The meatloaf is just that good.</p>
-	</header>
-<!--indented the lower lines-->
-	<header>
+		<header>
 		<nav>
 			<ul>
 				<li>
@@ -60,9 +31,36 @@
 				</li>
 			</ul>
 		</nav>
+
+		<h1><em>Our famous food</em></h1>
 	</header>
+	
+	<section>
+		<p>Your local restaurant is known for its outstanding selection of great American food!</p>
+		<p>Our list of food is but not limited to...</p>
+
+		<p class="food">Hamburger</p>
+
+
+		<p>Our hamburger is one of the greatest burgers of all time. Period. Nothing else needs to be said for how good it is!</p>
+
+		<p class="food">Steak</p>
+
+		<p>Our steaks are made like steaks should be made. Medium rare is the longest we cook them. Every cut into the steak streams out the sweet-savory juice that makes them amazing!</p>
+
+		<p class="food">Taco</p>
+
+		<p>Do you need something light to eat or are you in a hurry? Don't look farther than our tacos. You can add any toppings that we offer on your taco, making it one of the most popular items. Ask for a crunchy shell if you are feeling special or you can order it like a burrito.</p>
+
+		<p class="food">Meatloaf</p>
+
+		<p>Meatloaf is the way to go if you aren't sure what you want to eat tonight. 
+		With it being a homemade special, there is not any sauce that needs to go with it. 
+		The meatloaf is just that good.</p>
+<!--indented the lower lines-->
+		</section>
 		<footer>
-			537-851-5760
+			Contact us! 537-851-5760
 		</footer>
 	</body>
 </html>
