--- a/public_html/about.html
+++ b/public_html/about.html
@@ -5,12 +5,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>About</title>
-		<link rel="stylesheet" type="text/css" href="css_sheet.css">
-		<style>
-			h1 {
-				text-align: center;
-			}
-		</style>
 	</head>
 
 	<body>    <!--write the body-->
@@ -53,7 +47,7 @@
 		If you still aren't convinced, come visit us and mention this webpage 
 		to get a free appetizer and half off drinks&excl; We guarantee you won't regret it.</p>
 
-		<p id="challenge">Try our Charity Chowdown Challenge&excl; One of everything on the 
+		<p>Try our Charity Chowdown Challenge&excl; One of everything on the 
 		menu is yours to take down in one hour along with two friends. <br>
 		If you lose, we donate the cost of all menu items to a local charity. 
 		If you win, you get
