--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,13 +5,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Home</title>
-		<link rel="stylesheet" type="text/css" href="css_sheet.css">
-		<style>
-			h2 {
-				text-align: center;
-				font-size: 24px;
-			}
-		</style>
 	</head>
 
 	<body>
@@ -55,7 +48,7 @@
 			You better be hanging on to your seats because after reading this website you will be drooling saliva because the food here is delicious!
 		</p>
 
-		<h3 style="text-align: center; font-size: 20px;">Anyway, <em>welcome</em> to our website!</h3>
+		<h3>Anyway, <em>welcome</em> to our website!</h3>
 		<p>
 			Through this website, you can find all the information you are looking at for your local restaurant!
 		<br>
