--- a/public_html/menu.html
+++ b/public_html/menu.html
@@ -5,7 +5,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Menu</title>
-		<link rel="stylesheet" type="text/css" href="css_sheet.css">
 	</head>
 	<body>
 		<header>
@@ -39,20 +38,20 @@
 		<p>Your local restaurant is known for its outstanding selection of great American food!</p>
 		<p>Our list of food is but not limited to...</p>
 
-		<p class="food">Hamburger</p>
+		<p>Hamburger</p>
 
 
 		<p>Our hamburger is one of the greatest burgers of all time. Period. Nothing else needs to be said for how good it is!</p>
 
-		<p class="food">Steak</p>
+		<p>Steak</p>
 
 		<p>Our steaks are made like steaks should be made. Medium rare is the longest we cook them. Every cut into the steak streams out the sweet-savory juice that makes them amazing!</p>
 
-		<p class="food">Taco</p>
+		<p>Taco</p>
 
 		<p>Do you need something light to eat or are you in a hurry? Don't look farther than our tacos. You can add any toppings that we offer on your taco, making it one of the most popular items. Ask for a crunchy shell if you are feeling special or you can order it like a burrito.</p>
 
-		<p class="food">Meatloaf</p>
+		<p>Meatloaf</p>
 
 		<p>Meatloaf is the way to go if you aren't sure what you want to eat tonight. 
 		With it being a homemade special, there is not any sauce that needs to go with it. 
