Added bootstrap template and menu

--- a/public_html/about.html
+++ b/public_html/about.html
@@ -4,38 +4,60 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<title>About</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+        crossorigin="anonymous">
 	</head>
 
 	<body>    <!--write the body-->
 		<header>
-		<nav>
-			<ul>
-				<li>
-				<a href="index.html">Home Page</a> <!--Breydon-->
-				</li>
-				<li>
-				<a href="about.html">About Page</a> <!--Clarke-->
-				</li>
-				<li>
-				<a href="hours.html">Hours Page</a> <!--Breydon-->
-				</li>
-				<li>
-				<a href="menu.html">Menu Page</a> <!--Breydon-->
-				</li>
-				<li>
-				<a href="directions.html">Directions Page</a> <!--Clarke-->
-				</li>
-				<li>
-				<a href="applications.html">Applications Page</a> <!--Clarke-->
-				</li>
-			</ul>
-		</nav>
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand">Classic Family Restaurant</a>
+					<button class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-sm-0">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">Home Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="about.html">About Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="hours.html">Hours Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="menu.html">Menu Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="directions.html">Directions Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="applications.html">Applications Page</a> <!--Clarke-->
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 		<!--changed name-->
 		<h1>Classic Family Restaurant</h1>
 		</header>
 
-		<section>
+		<div class="container">
 		<h2>We have been open since the beginning of the American Revolution, and have proudly served the area ever since.</h2>
 		
 		<p>When it comes to local restaurants, ours is one of the most storied and patriotic of them all. Paul Revere used to buy our eggs before he would ride off to do his daily responsibilities. We have never lost our will to serve our fellow countrymen, or our commitment to excellence.<br>
@@ -53,12 +75,17 @@
 		If you win, you get
 		free pancakes for a month and &dollar;350 to the charity of your choosing&excl;</p>
 
-		</section>
-
 		<footer>
 			Contact us! 537-851-5760
 		</footer>
-	<!--organized the lower tags-->
+
+		</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous">
+		</script>
+
 	</body>
 </html>
 
