--- a/public_html/hours.html
+++ b/public_html/hours.html
@@ -4,39 +4,61 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<title>Hours</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+        crossorigin="anonymous">
 	</head>
 
 	<body>
 		<header>
-<nav>
-<ul>
-<li>
-<a href="index.html">Home Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="about.html">About Page</a> <!--Clarke-->
-</li>
-<li>
-<a href="hours.html">Hours Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="menu.html">Menu Page</a> <!--Breydon-->
-</li>
-<li>
-<a href="directions.html">Directions Page</a> <!--Clarke-->
-</li>
-<li>
-<a href="applications.html">Applications Page</a> <!--Clarke-->
-</li>
-</ul>
-</nav>
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand">Classic Family Restaurant</a>
+					<button class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-sm-0">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">Home Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="about.html">About Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="hours.html">Hours Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="menu.html">Menu Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="directions.html">Directions Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="applications.html">Applications Page</a> <!--Clarke-->
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 		<h1>
 			<em>Restaurant Hours</em>
 		</h1>
 		</header>
 		
-		<section>
+		<div class="container">
 			<p>Welcome to the hours of <em>YOUR</em> local restaurant! We are open most of the day, 7 days a week.</p>
 			<p>If you want to eat breakfast for dinner, go right ahead! If a hamburger sounds good for breakfast, go right ahead!</p>
 			<p>Our main priority here is to make sure you do not go home hungry! And if for some reason you cannot eat all of the food, we offer take home! Just ask our professional team and they will show you the different sized of carry out boxes we offer!</p>
@@ -67,9 +89,17 @@
 			</tr>
 		</tbody>
 		</table>
-	</section>
+
 		<footer>
 			Contact us! 537-851-5760
 		</footer>
+
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous">
+	</script>
+
 	</body>
 </html>
