--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,71 +4,98 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<title>Home</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+        crossorigin="anonymous">
 	</head>
 
 	<body>
 		<header>
-			<nav>
-				<ul>
-					<li>
-						<a href="index.html">Home Page</a> <!--Breydon-->
-					</li>
-					<li>
-						<a href="about.html">About Page</a> <!--Clarke-->
-					</li>
-					<li>
-						<a href="hours.html">Hours Page</a> <!--Breydon-->
-					</li>
-					<li>
-						<a href="menu.html">Menu Page</a> <!--Breydon-->
-					</li>
-					<li>
-						<a href="directions.html">Directions Page</a> <!--Clarke-->
-					</li>
-					<li>
-						<a href="applications.html">Applications Page</a> <!--Clarke-->
-					</li>
-				</ul>
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand">Classic Family Restaurant</a>
+					<button class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-sm-0">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="index.html">Home Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="about.html">About Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="hours.html">Hours Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="menu.html">Menu Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="directions.html">Directions Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="applications.html">Applications Page</a> <!--Clarke-->
+							</li>
+						</ul>
+					</div>
+				</div>
 			</nav>
 			<img src="image/welcome.jpg" alt="Welcome" height="80" width="500">
 		</header>
 
-		<section>
-		<p>
-			What brings you to this webpage on the internet?
-			Did you click on the wrong website, did you randomly end up here, or did your device send you here?
-		</p>
+		<div class="container">
+			<p>
+				What brings you to this webpage on the internet?
+				Did you click on the wrong website, did you randomly end up here, or did your device send you here?
+			</p>
 
-		<h2>It doesn't matter!</h2>
+			<h2>It doesn't matter!</h2>
 
-		<p>
-			Because you are on the one and only famous local restaurant's website!
+			<p>
+				Because you are on the one and only famous local restaurant's website!
+				<br>
+				You better be hanging on to your seats because after reading this website you will be drooling saliva because the food here is delicious!
+			</p>
+
+			<h3>Anyway, <em>welcome</em> to our website!</h3>
+			<p>
+				Through this website, you can find all the information you are looking at for your local restaurant!
 			<br>
-			You better be hanging on to your seats because after reading this website you will be drooling saliva because the food here is delicious!
-		</p>
-
-		<h3>Anyway, <em>welcome</em> to our website!</h3>
-		<p>
-			Through this website, you can find all the information you are looking at for your local restaurant!
-		<br>
-			Starting off on the second page we tell you about ourselves. 
-			Go there to find out more about us and our restaurant.
-		<br>
-			On our third page, we got our daily hours. 
-			This page is the second most viewed page right behind our MENU page! 
-			The menu shows the community some of our most popular and well-known dishes.
-		<br>
-			If you need to find out how to find us look no further than our directions page.
-		<br>
-			And last but not least, we have our applications page to tell you guys how to become one of us! We welcome everybody!
-		</p>
+				Starting off on the second page we tell you about ourselves. 
+				Go there to find out more about us and our restaurant.
+			<br>
+				On our third page, we got our daily hours. 
+				This page is the second most viewed page right behind our MENU page! 
+				The menu shows the community some of our most popular and well-known dishes.
+			<br>
+				If you need to find out how to find us look no further than our directions page.
+			<br>
+				And last but not least, we have our applications page to tell you guys how to become one of us! We welcome everybody!
+			</p>
 	
-		</section>
 		<footer>
 			Contact us! 537-851-5760
 		</footer>
 
+		</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous">
+		</script>
 	</body>
 
 </html>
