--- a/public_html/directions.html
+++ b/public_html/directions.html
@@ -4,44 +4,75 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<title>Find Us!</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+        crossorigin="anonymous">
 	</head>
 	<body>    <!--write the body-->
 		<header>
-		<nav>
-			<ul>
-				<li>
-				<a href="index.html">Home Page</a> <!--Breydon-->
-				</li>
-				<li>
-				<a href="about.html">About Page</a> <!--Clarke-->
-				</li>
-				<li>
-				<a href="hours.html">Hours Page</a> <!--Breydon-->
-				</li>
-				<li>
-				<a href="menu.html">Menu Page</a> <!--Breydon-->
-				</li>
-				<li>
-				<a href="directions.html">Directions Page</a> <!--Clarke-->
-				</li>
-				<li>
-				<a href="applications.html">Applications Page</a> <!--Clarke-->
-				</li>
-			</ul>
-		</nav>
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand">Classic Family Restaurant</a>
+					<button class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-sm-0">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">Home Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="about.html">About Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="hours.html">Hours Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="menu.html">Menu Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="directions.html">Directions Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="applications.html">Applications Page</a> <!--Clarke-->
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 		<h1>Your Local Restaurant</h1>
 		</header>
 
-	<section>
+	<div class="container">
 		<p>We are located at the corner of 3rd Street and 15th Avenue and catty-corner to Escapade Boulevard. We also offer delivery services through UberEats and Grubhub.</p>
 		<p>Our address is 1722 W 3rd Street if you would prefer to use a navigation app to guide you.</p>
-	</section>
 	
 		<img src="images/map.png"  alt="Map of Location" />
-		<img src="images/street_view.png" alt="Street view" /> <!--I made both of these in MS Paint I hope they get the point across-->
+
+		<img src="images/street_view.png" alt="Street view" />
+
 		<footer>
 			Contact us! 537-851-5760
 		</footer>
+
+	</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+		        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+		        crossorigin="anonymous">
+		</script>
+
 	</body>
 </html>
