--- a/public_html/menu.html
+++ b/public_html/menu.html
@@ -4,37 +4,59 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<title>Menu</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+        crossorigin="anonymous">
 	</head>
 	<body>
 		<header>
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html">Home Page</a> <!--Breydon-->
-				</li>
-				<li>
-					<a href="about.html">About Page</a> <!--Clarke-->
-				</li>
-				<li>
-					<a href="hours.html">Hours Page</a> <!--Breydon-->
-				</li>
-				<li>
-					<a href="menu.html">Menu Page</a> <!--Breydon-->
-				</li>
-				<li>
-					<a href="directions.html">Directions Page</a> <!--Clarke-->
-				</li>
-				<li>
-					<a href="applications.html">Applications Page</a> <!--Clarke-->
-				</li>
-			</ul>
-		</nav>
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand">Classic Family Restaurant</a>
+					<button class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-sm-0">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">Home Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="about.html">About Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="hours.html">Hours Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="menu.html">Menu Page</a> <!--Breydon-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="directions.html">Directions Page</a> <!--Clarke-->
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="applications.html">Applications Page</a> <!--Clarke-->
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
 
 		<h1><em>Our famous food</em></h1>
 	</header>
 	
-	<section>
+	<div class="container">
 		<p>Your local restaurant is known for its outstanding selection of great American food!</p>
 		<p>Our list of food is but not limited to...</p>
 
@@ -56,11 +78,17 @@
 		<p>Meatloaf is the way to go if you aren't sure what you want to eat tonight. 
 		With it being a homemade special, there is not any sauce that needs to go with it. 
 		The meatloaf is just that good.</p>
-<!--indented the lower lines-->
-		</section>
+
 		<footer>
 			Contact us! 537-851-5760
 		</footer>
+
+	</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+		        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+		        crossorigin="anonymous">
+		</script>
+
 	</body>
 </html>
-<!--added the line-->
