--- a/public_html/hours.html
+++ b/public_html/hours.html
@@ -67,7 +67,7 @@
 		</h2>
 			<p>We love food just as much as you do! That's why we started out own restaurant! So because of that, we are serving <em>breakfast, lunch, and dinner</em> at any time during our hours.</p>
 			<p>We challenge you to push our chefs limits. Go crazy on what to order, our chefs will be ready for it!</p>
-		<table>
+		<table class="table">
 			<tr>
 				<th>Monday</th>
 				<th>Tuesday</th>
