Added bootstrap to the website

--- a/public_html/applications.html
+++ b/public_html/applications.html
@@ -56,8 +56,10 @@
 		</header>
 
 		<div class="container">
-		<p>Now Hiring Multiple Positions&excl;</p>
-		<table>
+		<div class="alert alert-primary" role="alert">
+  		Now hiring multiple positions!
+		</div>
+		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
 					<th>Position</th>
