--- a/public_html/index.html
+++ b/public_html/index.html
@@ -85,6 +85,7 @@
 			<br>
 				And last but not least, we have our applications page to tell you guys how to become one of us! We welcome everybody!
 			</p>
+			<a class="btn btn-primary" href="hours.html" role="button">Apply Now!</a>
 	
 		<footer>
 			Contact us! 537-851-5760
