--- a/public_html/directions.html
+++ b/public_html/directions.html
@@ -57,11 +57,25 @@
 
 	<div class="container">
 		<p>We are located at the corner of 3rd Street and 15th Avenue and catty-corner to Escapade Boulevard. We also offer delivery services through UberEats and Grubhub.</p>
-		<p>Our address is 1722 W 3rd Street if you would prefer to use a navigation app to guide you.</p>
 	
-		<img src="images/map.png"  alt="Map of Location" />
+	<div class="row">
+		<div class="mycolumn col-6">
+		<div class="card" style="width: 32rem;">
+  			<img src="images/map.png" class="card-img-top" alt="Map of Location">
+  			<div class="card-body">
+			<h5 class="card-title">Location</h5>
+    		<p class="card-text">Our address is 1722 W 3rd Street if you would prefer to use a navigation app to guide you.</p>
+  			</div>
+		</div>
+		</div>
 
-		<img src="images/street_view.png" alt="Street view" />
+			<div class="card" style="width: 32rem;">
+  			<img src="images/street_view.png" class="card-img-top" alt="Street View">
+  			<div class="card-body">
+			<h5 class="card-title">Location</h5>
+    		<p class="card-text">This is the street view of our location.</p>
+  			</div>
+		</div>
 
 		<footer>
 			Contact us! 537-851-5760
@@ -73,6 +87,7 @@
 		        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
 		        crossorigin="anonymous">
 		</script>
+	</div>
 
 	</body>
 </html>
